--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./favicon-32x32.png"
     />
-    <title>Expenses</title>
+    <title>Expenses Chart Component</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
